--- a/src/index.css
+++ b/src/index.css
@@ -80,7 +80,13 @@ form {
     position: relative;
 }
 
+.flashCard:hover {
+    cursor: pointer;
+    background: rgba(50, 57, 73, 0.68);
+}
+
 .deleteFlashCard {
+    font-weight: bold;
     position: absolute;
     display: block;
     color: red;
@@ -88,10 +94,11 @@ form {
     right: 15px;
 }
 
-.flashCard:hover {
-    cursor: pointer;
-    background: rgba(50, 57, 73, 0.68);
+.deleteFlashCard:hover {
+transform: scale(1.1);
 }
+
+
 
 footer {
     display: flex;
